<resources>
    <string name="app_name">WLRUS</string>
    <string name="app_description">WLRUS VPN Client</string>
    <string name="action_stop_service">Stop</string>
    <string name="app_tile_first_use">Tap to set up</string>
    <string name="app_tile_name">WLRUS</string>
    <string name="app_widget_name">WLRUS Widget</string>
    <string name="asset_geo_files_sources">Geo Files Source</string>
    <string name="connection_connected">Connected</string>
    <string name="connection_not_connected">Not Connected</string>
    <string name="connection_runing_task_left">Tasks left: %1$d</string>
    <string name="connection_test_error_status_code">Error: %1$d</string>
    <string name="connection_test_pending">Pending</string>
    <string name="connection_test_testing">Testing&#8230;</string>
    <string name="connection_test_testing_count">Testing %1$d</string>
    <string name="connection_test_fail">Test failed</string>
    <string name="connection_test_available">%1$s ms</string>
    <string name="connection_test_error">Error: %1$s</string>
    <string name="del_config_comfirm">Delete selected server(s)?</string>
    <string name="del_invalid_config_comfirm">Delete invalid servers?</string>
    <string name="filter_config_all">All</string>
    <string name="import_subscription_failure">Subscription update failed</string>
    <string name="import_subscription_success">Imported %1$d server(s)</string>
    <string name="logcat_clear">Clear</string>
    <string name="logcat_copy">Copy</string>
    <string name="menu_item_add_asset">Add Asset</string>
    <string name="menu_item_add_config">Add Server</string>
    <string name="menu_item_add_file">Add File</string>
    <string name="menu_item_add_url">Add URL</string>
    <string name="menu_item_del_config">Delete</string>
    <string name="menu_item_download_file">Download</string>
    <string name="menu_item_edit_config">Edit</string>
    <string name="menu_item_export_proxy_app">Export Proxy Apps</string>
    <string name="menu_item_import_config_clipboard">Import from Clipboard</string>
    <string name="menu_item_import_config_local">Import from File</string>
    <string name="menu_item_import_config_manually_http">Add HTTP</string>
    <string name="menu_item_import_config_manually_hysteria2">Add Hysteria2</string>
    <string name="menu_item_import_config_manually_socks">Add SOCKS</string>
    <string name="menu_item_import_config_manually_ss">Add Shadowsocks</string>
    <string name="menu_item_import_config_manually_trojan">Add Trojan</string>
    <string name="menu_item_import_config_manually_vless">Add VLESS</string>
    <string name="menu_item_import_config_manually_vmess">Add VMess</string>
    <string name="menu_item_import_config_manually_wireguard">Add WireGuard</string>
    <string name="menu_item_import_config_policy_group">Add Policy Group</string>
    <string name="menu_item_import_config_qrcode">Scan QR Code</string>
    <string name="menu_item_import_proxy_app">Import Proxy Apps</string>
    <string name="menu_item_invert_selection">Invert Selection</string>
    <string name="menu_item_save_config">Save</string>
    <string name="menu_item_scan_qrcode">Scan QR Code</string>
    <string name="menu_item_search">Search</string>
    <string name="menu_item_select_all">Select All</string>
    <string name="menu_item_select_proxy_app">Select Proxy Apps</string>
    <string name="migration_fail">Migration failed</string>
    <string name="migration_success">Migration successful</string>
    <string name="msg_dialog_progress">Please wait&#8230;</string>
    <string name="msg_downloading_content">Downloading&#8230;</string>
    <string name="msg_enter_keywords">Enter keywords</string>
    <string name="msg_file_not_found">File not found</string>
    <string name="msg_remark_is_duplicate">Remark already exists</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="notification_action_more">More</string>
    <string name="notification_action_stop_v2ray">Disconnect</string>
    <string name="notification_channel_name">WLRUS Background Service</string>
    <string name="notification_channel_des">WLRUS VPN service notification</string>
    <string name="per_app_proxy_settings">Per-App Proxy</string>
    <string name="per_app_proxy_settings_enable">Enable Per-App Proxy</string>
    <string name="pull_down_to_refresh">Pull down to refresh</string>
    <string name="routing_settings_add_rule">Add Rule</string>
    <string name="routing_settings_delete">Delete</string>
    <string name="routing_settings_domain_strategy">Domain Strategy</string>
    <string name="routing_settings_export_rulesets_to_clipboard">Export to Clipboard</string>
    <string name="routing_settings_import_predefined_rulesets">Import Predefined</string>
    <string name="routing_settings_import_rulesets_from_clipboard">Import from Clipboard</string>
    <string name="routing_settings_import_rulesets_from_qrcode">Import from QR Code</string>
    <string name="routing_settings_import_rulesets_tip">Import rulesets</string>
    <string name="routing_settings_network">Network</string>
    <string name="routing_settings_network_tip">e.g. tcp,udp</string>
    <string name="routing_settings_outbound_tag">Outbound Tag</string>
    <string name="routing_settings_port">Port</string>
    <string name="routing_settings_protocol">Protocol</string>
    <string name="routing_settings_protocol_tip">e.g. http,tls</string>
    <string name="routing_settings_save">Save</string>
    <string name="routing_settings_title">Routing Rules</string>
    <string name="routing_settings_locked">Locked</string>
    <string name="routing_settings_rule_title">Rule Name</string>
    <string name="routing_settings_domain">Domain Rules</string>
    <string name="routing_settings_tips">Separate entries with newline</string>
    <string name="routing_settings_ip">IP Rules</string>
    <string name="server_customize_config">Custom Config</string>
    <string name="server_lab_address">Address</string>
    <string name="server_lab_address3">Address</string>
    <string name="server_lab_allow_insecure">Allow Insecure</string>
    <string name="server_lab_alterid">Alter ID</string>
    <string name="server_lab_bandwidth_down">Download Bandwidth</string>
    <string name="server_lab_bandwidth_up">Upload Bandwidth</string>
    <string name="server_lab_content">Content</string>
    <string name="server_lab_ech_config_list">ECH Config</string>
    <string name="server_lab_ech_force_query">ECH Force Query</string>
    <string name="server_lab_encryption">Encryption</string>
    <string name="server_lab_flow">Flow</string>
    <string name="server_lab_head_type">Header Type</string>
    <string name="server_lab_id">UUID</string>
    <string name="server_lab_id3">ID</string>
    <string name="server_lab_id4">ID</string>
    <string name="server_lab_local_address">Local Address</string>
    <string name="server_lab_local_mtu">MTU</string>
    <string name="server_lab_mldsa65_verify">MLDSA65 Verify</string>
    <string name="server_lab_mode_type">Mode</string>
    <string name="server_lab_more_function">More Options</string>
    <string name="server_lab_need_inbound">Needs Inbound</string>
    <string name="server_lab_network">Network</string>
    <string name="server_lab_path">Path</string>
    <string name="server_lab_path_grpc">gRPC Path</string>
    <string name="server_lab_path_h2">H2 Path</string>
    <string name="server_lab_path_httpupgrade">HTTPUpgrade Path</string>
    <string name="server_lab_path_kcp">KCP Path</string>
    <string name="server_lab_path_quic">QUIC Path</string>
    <string name="server_lab_path_ws">WebSocket Path</string>
    <string name="server_lab_path_xhttp">XHTTP Path</string>
    <string name="server_lab_pinned_ca256">Pinned CA SHA256</string>
    <string name="server_lab_port">Port</string>
    <string name="server_lab_port3">Port</string>
    <string name="server_lab_port_hop">Port Hop</string>
    <string name="server_lab_port_hop_interval">Hop Interval</string>
    <string name="server_lab_preshared_key">Pre-shared Key</string>
    <string name="server_lab_public_key">Public Key</string>
    <string name="server_lab_remarks">Remarks</string>
    <string name="server_lab_request_host">Host</string>
    <string name="server_lab_request_host6">Host</string>
    <string name="server_lab_request_host_grpc">gRPC Host</string>
    <string name="server_lab_request_host_h2">H2 Host</string>
    <string name="server_lab_request_host_http">HTTP Host</string>
    <string name="server_lab_request_host_httpupgrade">HTTPUpgrade Host</string>
    <string name="server_lab_request_host_quic">QUIC Host</string>
    <string name="server_lab_request_host_ws">WebSocket Host</string>
    <string name="server_lab_request_host_xhttp">XHTTP Host</string>
    <string name="server_lab_reserved">Reserved</string>
    <string name="server_lab_secret_key">Secret Key</string>
    <string name="server_lab_security">Security</string>
    <string name="server_lab_security3">Security</string>
    <string name="server_lab_security4">Security</string>
    <string name="server_lab_short_id">Short ID</string>
    <string name="server_lab_sni">SNI</string>
    <string name="server_lab_spider_x">Spider X</string>
    <string name="server_lab_stream_alpn">ALPN</string>
    <string name="server_lab_stream_fingerprint">Fingerprint</string>
    <string name="server_lab_stream_security">TLS</string>
    <string name="server_lab_xhttp_extra">XHTTP Extra</string>
    <string name="server_lab_xhttp_mode">XHTTP Mode</string>
    <string name="server_obfs_password">Obfs Password</string>
    <string name="sub_allow_insecure_url">Allow Insecure URL</string>
    <string name="sub_auto_update">Auto Update</string>
    <string name="sub_setting_enable">Enabled</string>
    <string name="sub_setting_filter">Filter</string>
    <string name="sub_setting_next_profile">Next Profile</string>
    <string name="sub_setting_pre_profile">Previous Profile</string>
    <string name="sub_setting_pre_profile_tip">Profile cycling tip</string>
    <string name="sub_setting_url">URL</string>
    <string name="sub_setting_user_agent">User Agent</string>
    <string name="sub_setting_remarks">Remarks</string>
    <string name="sub_item_remarks">Remarks</string>
    <string name="sub_item_url">URL</string>
    <string name="sub_item_filter">Filter</string>
    <string name="sub_item_auto_update">Auto Update</string>
    <string name="sub_item_update_interval">Update Interval (h)</string>
    <string name="sub_update_warn">Updating&#8230;</string>
    <string name="sub_update_toast">Subscription updated</string>
    <string name="summary_pref_allow_insecure">Allow insecure TLS connections</string>
    <string name="summary_pref_append_http_proxy">Append system HTTP proxy</string>
    <string name="summary_pref_auto_remove_invalid_after_test">Remove invalid servers after test</string>
    <string name="summary_pref_auto_sort_after_test">Sort by latency after test</string>
    <string name="summary_pref_auto_update_subscription">Interval in hours</string>
    <string name="summary_pref_confirm_remove">Ask before deleting</string>
    <string name="title_pref_per_app_proxy">Per-App Proxy</string>
    <string name="menu_subscriptions">Subscriptions</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_user_assets">Assets</string>
    <string name="menu_routing">Routing</string>
    <string name="menu_logcat">Log</string>
    <string name="menu_backup_restore">Backup</string>
    <string name="menu_update">Check Update</string>
    <string name="menu_about">About</string>
    <string name="menu_feedback">Feedback</string>
    <string name="menu_promotion">Promotion</string>
    <string name="menu_check_update">Check for Update</string>
</resources>